--- a/180221CursoLuckia/180221CursoLuckia/MainWindow.xaml
+++ b/180221CursoLuckia/180221CursoLuckia/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Button x:Name="btn_7" Content="7" HorizontalAlignment="Left" Margin="51,93,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_7_Click"/>
         <Button x:Name="btn_8" Content="8" HorizontalAlignment="Left" Margin="102,93,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_8_Click"/>
         <Button x:Name="btn_9" Content="9" HorizontalAlignment="Left" Margin="154,93,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_9_Click"/>
-        <TextBox x:Name="textBoxResultado" HorizontalAlignment="Left" TextAlignment="Right" Height="53" Margin="51,35,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="197" FontFamily="Trebuchet MS" FontSize="36" TextDecorations="{x:Null}"/>
+        <TextBox x:Name="textBoxResultado" HorizontalAlignment="Left" TextAlignment="Right" Height="53" Margin="51,35,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="197" FontFamily="Trebuchet MS" FontSize="36" TextDecorations="{x:Null}" BorderThickness="1"/>
         <Button x:Name="btn_4" Content="4" HorizontalAlignment="Left" Margin="51,143,0,0" VerticalAlignment="Top" Width="40" Height="40" FontSize="24" FontFamily="Trebuchet MS" FontWeight="Bold" Click="Btn_4_Click"/>
         <Button x:Name="btn_5" Content="5" HorizontalAlignment="Left" Margin="102,143,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="24" Click="Btn_5_Click"/>
         <Button x:Name="btn_6" Content="6" HorizontalAlignment="Left" Margin="154,143,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_6_Click"/>
@@ -22,9 +22,8 @@
         <Button x:Name="btn_mul" Content="*" HorizontalAlignment="Left" Margin="208,193,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_mul_Click"/>
         <Button x:Name="btn_0" Content="0" HorizontalAlignment="Left" Margin="102,241,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_0_Click"/>
         <Button x:Name="btn_div" Content="/" HorizontalAlignment="Left" Margin="208,241,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="24" Click="Btn_div_Click"/>
-        <Button x:Name="btn_resultado" Content="=" HorizontalAlignment="Left" Margin="154,293,0,0" VerticalAlignment="Top" Width="94" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_resultado_Click"/>
-        <Button x:Name="btn_clean" Content="C" HorizontalAlignment="Left" Margin="51,293,0,0" VerticalAlignment="Top" Width="91" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_clean_Click"/>
+        <Button x:Name="btn_resultado" Content="=" HorizontalAlignment="Left" Margin="102,286,0,0" VerticalAlignment="Top" Width="92" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_resultado_Click"/>
+        <Button x:Name="btn_clean" Content="C" HorizontalAlignment="Left" Margin="51,241,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_clean_Click"/>
         <Button x:Name="btn_decimal" Content="." HorizontalAlignment="Left" Margin="154,241,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_decimal_Click"/>
-        <TextBox x:Name="textbox1" HorizontalAlignment="Left" Height="40" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="40" Margin="51,241,0,0" TextChanged="TextBox_TextChanged"/>
     </Grid>
 </Window>
