--- a/180221CursoLuckia/180221CursoLuckia/MainWindow.xaml
+++ b/180221CursoLuckia/180221CursoLuckia/MainWindow.xaml
@@ -6,37 +6,37 @@
         xmlns:local="clr-namespace:_180221CursoLuckia"
         mc:Ignorable="d"
         Title="· Calculadora ·" Height="400" Width="300" TextBlock.TextAlignment="Center">
-    <Grid Background="#FFB4B4B4" Height="400" Margin="0,0,-0.4,-7.6" VerticalAlignment="Top">
-        <Button x:Name="btn_7" Content="7" HorizontalAlignment="Left" Margin="51,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_7_Click"/>
-        <Button x:Name="btn_8" Content="8" HorizontalAlignment="Left" Margin="102,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_8_Click"/>
-        <Button x:Name="btn_9" Content="9" HorizontalAlignment="Left" Margin="154,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_9_Click"/>
-        <TextBox x:Name="textBoxResultado" HorizontalAlignment="Left" TextAlignment="Right" Height="53" Margin="51,42,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="197" FontFamily="Trebuchet MS" FontSize="36" TextDecorations="{x:Null}" BorderThickness="1"/>
-        <Button x:Name="btn_4" Content="4" HorizontalAlignment="Left" Margin="51,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontSize="24" FontFamily="Trebuchet MS" FontWeight="Bold" Click="Btn_4_Click"/>
-        <Button x:Name="btn_5" Content="5" HorizontalAlignment="Left" Margin="102,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="24" Click="Btn_5_Click"/>
-        <Button x:Name="btn_6" Content="6" HorizontalAlignment="Left" Margin="154,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_6_Click"/>
-        <Button x:Name="btn_1" Content="1" HorizontalAlignment="Left" Margin="51,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_1_Click"/>
-        <Button x:Name="btn_2" Content="2" HorizontalAlignment="Left" Margin="102,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_2_Click"/>
-        <Button x:Name="btn_3" Content="3" HorizontalAlignment="Left" Margin="154,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_3_Click"/>
-        <Button x:Name="btn_suma" Content="+" HorizontalAlignment="Left" Margin="208,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_suma_Click"/>
-        <Button x:Name="btn_resta" Content="-" HorizontalAlignment="Left" Margin="208,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_resta_Click"/>
-        <Button x:Name="btn_mul" Content="*" HorizontalAlignment="Left" Margin="208,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_mul_Click"/>
-        <Button x:Name="btn_0" Content="0" HorizontalAlignment="Left" Margin="102,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_0_Click"/>
-        <Button x:Name="btn_div" Content="/" HorizontalAlignment="Left" Margin="208,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="24" Click="Btn_div_Click"/>
-        <Button x:Name="btn_resultado" Content="=" HorizontalAlignment="Left" Margin="208,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_resultado_Click"/>
-        <Button x:Name="btn_clean" Content="C" HorizontalAlignment="Left" Margin="51,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_clean_Click"/>
-        <Button x:Name="btn_decimal" Content="." HorizontalAlignment="Left" Margin="154,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_decimal_Click"/>
-        <Button x:Name="btn_cuadrado" Content="x²" Visibility="Collapsed" HorizontalAlignment="Left" Margin="102,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_cuadrado_Click"/>
-        <Button x:Name="btn_masmenos" Content="+/-" Visibility="Collapsed" HorizontalAlignment="Left" Margin="51,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_masmenos_Click"/>
-        <Button x:Name="btn_porcentaje" Content="%" Visibility="Collapsed" HorizontalAlignment="Left" Margin="154,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_porcentaje_Click"/>
+    <Grid Background="#FF460303" Height="400" Margin="0,0,-0.4,-7.6" VerticalAlignment="Top">
+        <Button x:Name="btn_7" Content="7" HorizontalAlignment="Left" Margin="51,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_7_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_8" Content="8" HorizontalAlignment="Left" Margin="102,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_8_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_9" Content="9" HorizontalAlignment="Left" Margin="154,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_9_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <TextBox x:Name="textBoxResultado" HorizontalAlignment="Left" TextAlignment="Right" Height="53" Margin="51,42,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="197" FontFamily="Trebuchet MS" FontSize="36" TextDecorations="{x:Null}" BorderThickness="1" Foreground="White" Background="#FF623131"/>
+        <Button x:Name="btn_4" Content="4" HorizontalAlignment="Left" Margin="51,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontSize="24" FontFamily="Trebuchet MS" FontWeight="Bold" Click="Btn_4_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_5" Content="5" HorizontalAlignment="Left" Margin="102,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="24" Click="Btn_5_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_6" Content="6" HorizontalAlignment="Left" Margin="154,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_6_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_1" Content="1" HorizontalAlignment="Left" Margin="51,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_1_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_2" Content="2" HorizontalAlignment="Left" Margin="102,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_2_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_3" Content="3" HorizontalAlignment="Left" Margin="154,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_3_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_suma" Content="+" HorizontalAlignment="Left" Margin="208,100,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_suma_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_resta" Content="-" HorizontalAlignment="Left" Margin="208,150,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_resta_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_mul" Content="*" HorizontalAlignment="Left" Margin="208,200,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_mul_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_0" Content="0" HorizontalAlignment="Left" Margin="102,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_0_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_div" Content="/" HorizontalAlignment="Left" Margin="208,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontWeight="Bold" FontSize="24" Click="Btn_div_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_resultado" Content="=" HorizontalAlignment="Left" Margin="208,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_resultado_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_clean" Content="C" HorizontalAlignment="Left" Margin="51,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_clean_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_decimal" Content="." HorizontalAlignment="Left" Margin="154,248,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_decimal_Click" Background="#FF020000" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_cuadrado" Content="x²" Visibility="Collapsed" HorizontalAlignment="Left" Margin="102,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_cuadrado_Click" Background="Black" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_masmenos" Content="+/-" Visibility="Collapsed" HorizontalAlignment="Left" Margin="51,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_masmenos_Click" Background="Black" Foreground="#FFDA5A06"/>
+        <Button x:Name="btn_porcentaje" Content="%" Visibility="Collapsed" HorizontalAlignment="Left" Margin="154,296,0,0" VerticalAlignment="Top" Width="40" Height="40" FontFamily="Trebuchet MS" FontSize="24" FontWeight="Bold" Click="Btn_porcentaje_Click" Background="Black" Foreground="#FFDA5A06"/>
 
         <DockPanel x:Name="dockPanel_Menu" HorizontalAlignment="Left" Height="20" LastChildFill="False" VerticalAlignment="Top" Width="293" Margin="0,0,-0.4,0">
-            <Menu x:Name="menuPrincipal" Height="20" VerticalAlignment="Top" Width="293">
-                <MenuItem Header="Menú" TextBlock.TextAlignment="Center">
-                    <MenuItem x:Name="menuItemAvanzada" Header="Avanzada" TextBlock.TextAlignment="Center" Click="MenuItemAvanzada_Click"/>
-                    <MenuItem x:Name="menuSalir" Header="Salir" TextBlock.TextAlignment="Center" Click="Btn_Salir_Click"/>
+            <Menu x:Name="menuPrincipal" Height="20" VerticalAlignment="Top" Width="293" FontFamily="Trebuchet MS" FontWeight="Bold" Foreground="#FFDA5A06" Background="Black">
+                <MenuItem Header="Menú" TextBlock.TextAlignment="Center" Foreground="#FFDA5A06">
+                    <MenuItem x:Name="menuItemAvanzada" Header="Avanzada" TextBlock.TextAlignment="Center" Click="MenuItemAvanzada_Click" Background="Black"/>
+                    <MenuItem x:Name="menuSalir" Header="Salir" TextBlock.TextAlignment="Center" Click="Btn_Salir_Click" Background="Black" BorderBrush="#FFDA5A06"/>
                 </MenuItem>
-                <MenuItem Header="Info" TextBlock.TextAlignment="Center">
-                    <MenuItem Header="Detalles" TextBlock.TextAlignment="Center" Click="MenuItem_Click"/>
+                <MenuItem Header="Info" TextBlock.TextAlignment="Center" Background="Black" Foreground="#FFDA5A06">
+                    <MenuItem Header="Detalles" TextBlock.TextAlignment="Center" Click="MenuItem_Click" Foreground="#FFDA5A06" BorderBrush="#FFDA5A06" Background="Black" BorderThickness="1"/>
                 </MenuItem>
             </Menu>
         </DockPanel>
